# comptests

./: .bumpversion.cfg  .gitignore  Makefile  README.md  project.pp1.yaml  pyproject.toml  requirements.txt  setup.json  setup.py  shippable.yml
.circleci/: comptests_tests.tests  config.yml
future/: xunitext.py
src/: xunitext.py
src/comptests/: __init__.py  comptest_to_junit.py  comptests.py  find_modules_imp.py  indices.py  junit_compare.py  nose.py  registrar.py  reports.py  results.py
src/comptests/unittests/: test_example_package.py
src/comptests_ex/: test_yield.py
src/comptests_tests/: test_example_package.py
src/example_package/: __init__.py  configuration.py  interfaces.py
src/example_package/configs/: tests.example_class1.yaml  tests.example_class2.yaml
src/example_package/unittests/: __init__.py  all_tests.py  generation.py
