[project]
name = "comptests-z7"
version = "7.2"
authors = [{name = "Andrea Censi", email = "info@zupermind.com"}]
dependencies = ["zuper-commons-z7", "ConfTools-z7", "QuickApp-z7", "SystemCmd-z7", "compmake-z7", "reprep-z7", "junit-xml", "coverage", "zuper-utils-python-z7", "zuper-utils-asyncio-z7", "zuper-zapp-z7", "zuper-zapp-interfaces-z7", "PyYAML"]

[project.scripts]
comptests = "comptests:main_comptests"
comptests-to-junit = "comptests.comptest_to_junit:comptest_to_junit_main"

[tool]
[tool.poetry]
name = "comptests-z7"
version = "7.2"
description = ""
authors = ["Andrea Censi <info@zupermind.com>"]
packages = [{include = "comptests", from = "src"}]

[tool.setuptools]
packages = ["comptests"]
package-dir = {"" = "src"}
