[project]
name = "comptests-z7"
version = "7.2"
authors = [{name = "Andrea Censi", email = "AndreaCensi@users.noreply.github.com"}]
dependencies = [
    "ConfTools-z7",
    "PyYAML",
    "QuickApp-z7",
    "SystemCmd-z7",
    "compmake-z7",
    "coverage",
    "junit-xml",
    "reprep-z7",
    "zuper-commons-z7",
    "zuper-utils-asyncio-z7",
    "zuper-utils-python-z7",
    "zuper-zapp-interfaces-z7",
    "zuper-zapp-z7",
    ]

[project.scripts]
comptests = "comptests:main_comptests"
comptests-to-junit = "comptests.comptest_to_junit:comptest_to_junit_main"

[tool]
[tool.poetry]
name = "comptests-z7"
version = "7.2"
description = ""
authors = ["Andrea Censi <AndreaCensi@users.noreply.github.com>"]
packages = [
    {from = "src", include = "comptests"},
    ]

[tool.setuptools]
packages = [
    "comptests",
    ]
package-dir = {"" = "src"}
